--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+
 body {
   background-color: #f7f7f7;
+  font-family: "Raleway", sans-serif;
 }
 #title {
   color: #455768;
